--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,22 @@
 spring.application.name=picpay
 
+# datasource url
 spring.datasource.url=jdbc:h2:file:./picpay.db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# h2 config
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-
 spring.sql.init.mode=always
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.open-in-view=false
-
-spring.flyway.enabled=true
-spring.flyway.url=jdbc:h2:file:./picpay.db
-spring.flyway.user=sa
-spring.flyway.password=
-#spring.flyway.group=true
-
-
+# Fly Way config enable and migrations
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baselineOnMigrate=true
+# Fly Way Connection database
+spring.flyway.url=jdbc:h2:file:./picpay.db
+spring.flyway.user=sa
+spring.flyway.password=
