--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=picpay
+spring.main.allow-bean-definition-overriding=true
 
 # datasource url
 spring.datasource.url=jdbc:h2:file:./picpay.db
@@ -20,3 +21,9 @@ spring.flyway.baselineOnMigrate=true
 spring.flyway.url=jdbc:h2:file:./picpay.db
 spring.flyway.user=sa
 spring.flyway.password=
+
+# Kafka Queue Config
+spring.kafka.bootstrap-servers=localhost:9094
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
