--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.flyway.user=sa
 spring.flyway.password=
 
 # Kafka Queue Config
-spring.kafka.bootstrap-servers=localhost:9094
+spring.kafka.bootstrap-servers=${KAFKA_URL:localhost:9094}
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
